--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,8 +2,8 @@ name: Update Calendar
 
 on:
   schedule:
-    - cron: '0 22 * * *' # 每天北京时间早6点 (UTC 22:00)
-  workflow_dispatch: # 允许手动点击按钮测试
+    - cron: '0 22 * * *' # 每天北京时间早6点
+  workflow_dispatch:
 
 jobs:
   build:
@@ -20,8 +20,11 @@ jobs:
       with:
         python-version: '3.9'
 
-    - name: Install libraries
-      run: pip install -r requirements.txt
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        playwright install chromium
 
     - name: Run script
       run: python main.py
@@ -31,4 +34,4 @@ jobs:
         git config --global user.name 'GitHub Action'
         git config --global user.email 'action@github.com'
         git add kiaa.ics
-        git diff --quiet && git diff --staged --quiet || (git commit -m "Update calendar" && git push)
+        git diff --quiet && git diff --staged --quiet || (git commit -m "Auto-update calendar [skip ci]" && git push)
